# utopia

./: .gitignore  Cargo.toml  Cargo_old.toml  Makefile  README.md  rust-toolchain.toml
development report/: 串口调试与内核启动问题排查报告.md  代码质量改进报告.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: constants.rs  error.rs  font.rs  logging.rs  logo.rs  main.rs  serial.rs  vga_buffer.rs
os/: Cargo.toml  build.rs
os/.cargo/: config.toml
os/src/: main.rs
