[workspace]
members = ["kernel", "os"]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[workspace.dependencies]
bootloader = { version = "0.11.10", default-features = false }
bootloader_api = "0.11.10"
volatile = "0.2.6"
spin = "0.5"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
linked_list_allocator = "0.9.0"