[package]
name = "utopia"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "utopia"
path = "src/main.rs"

[dependencies]
utopia_kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }

[build-dependencies]
bootloader = { workspace = true, features = ["bios", "uefi"] }
utopia_kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }